--- a/balsam-base/Dockerfile
+++ b/balsam-base/Dockerfile
@@ -41,5 +41,5 @@ RUN git clone --depth 1 https://github.com/argonne-lcf/balsam /balsam
 WORKDIR /balsam
 RUN pip install --upgrade pip && pip install -r requirements/deploy.txt
 RUN mkdir -p /balsam/log
-COPY ./entrypoint/sh /balsam/entrypoint.sh
+COPY ./entrypoint.sh /balsam/entrypoint.sh
 ENTRYPOINT ["/balsam/entrypoint.sh"]
