--- a/ompi/Dockerfile
+++ b/ompi/Dockerfile
@@ -24,7 +24,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /opt/
 RUN apt-get update && \
-    apt-get install -y gfortran git curl wget g++ build-essential && \
+    apt-get install -y gfortran git curl wget g++ build-essential \
+    openmpi-bin openmpi-doc libopenmpi-dev && \
     wget https://docs.it4i.cz/src/ompi/ompi.tar.gz && \
     tar -xzvf ompi.tar.gz && \
     rm ompi/Makefile
@@ -38,4 +39,4 @@ WORKDIR /opt/ompi
 # We can't build java ones
 ENV PATH=/opt/ompi:$PATH
 COPY ./Makefile ./Makefile
-RUN ls /opt/ompi && make
+RUN make
