--- a/weave-demos/Dockerfile
+++ b/weave-demos/Dockerfile
@@ -7,8 +7,9 @@ FROM ubuntu:${tag}
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
-RUN apt-get -y install \
+RUN apt-get -y install \    
     bwa \
+    git \
     samtools \
     bcftools \
     curl \
