ensure we have curl and wget
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/maestro-lulesh/Dockerfile
+++ b/maestro-lulesh/Dockerfile
@@ -7,7 +7,7 @@ FROM ubuntu:${tag}
 
 # workdir: /workflow
 
-RUN apt-get update && apt-get install -y git python3-pip
+RUN apt-get update && apt-get install -y git python3-pip wget curl
 
 # Wrappers to ensure we source the mamba environment!
 WORKDIR /workflow
