update sundials build to use jammy
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/sundials/Dockerfile
+++ b/sundials/Dockerfile
@@ -1,5 +1,5 @@
-ARG tag=latest
-FROM spack/ubuntu-bionic:${tag}
+ARG tag=jammy
+FROM spack/ubuntu-${tag}:latest
 
 # docker build -t demo .
 # docker exec -it demo bash
